# ld47

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: levels.ron  levels.ron-ex  move_block.bfxrlibrary
assets/char/: Untitled - 1.pyxel
assets/levels/: bdown.ron  bup.ron  first_button.ron  intro.ron  stairs.ron  test-level.ron
assets/music/: NoName.ptcop
assets/tiles/: workspace.pyxel
src/: main.rs
src/map/: materials.rs  meta.rs  mod.rs
src/mechanics/: audio.rs  buttons.rs  camera.rs  character.rs  constants.rs  ender.rs  events.rs  mod.rs  spawner.rs
src/ui/: mod.rs
