[package]
name = "ld47"
version = "0.1.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2"
enum_primitive = "0.1"
lazy_static = "1"
numerals = "0.1"
rand = "0.7"
ron = "0.6"
serde = { version = "1", features = ["serde_derive"] }
