[package]
name = "ld47"
version = "0.1.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Can revert to default branch when PR 580 is merged
bevy = { git = "https://github.com/mockersf/bevy", branch = "ld" }

[dependencies]
bevy = { git = "https://github.com/mockersf/bevy", branch = "ld" }
enum_primitive = "0.1"
lazy_static = "1"
numerals = "0.1"
rand = "0.7"
ron = "0.6"
serde = { version = "1", features = ["serde_derive"] }
